# Jibberish

./: CLAUDE.md  settings.gradle.kts
app/: build.gradle.kts
app/schemas/com.example.jibberish.data.JibberishDatabase/: 1.json
app/src/androidTest/java/com/example/jibberish/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.cpp
app/src/main/java/com/example/jibberish/: MainActivity.kt
app/src/main/java/com/example/jibberish/api/: GroqApiService.kt
app/src/main/java/com/example/jibberish/data/: JibberishDatabase.kt
app/src/main/java/com/example/jibberish/data/dao/: SessionDao.kt  TranslationDao.kt
app/src/main/java/com/example/jibberish/data/entities/: Session.kt  SessionWithTranslations.kt  Translation.kt
app/src/main/java/com/example/jibberish/managers/: ApiKeyManager.kt  AudioRecorderManager.kt  DataRetentionManager.kt  JargonManager.kt  MediaPipeLLMService.kt  ModelDownloadManager.kt  ModelManager.kt  SarvamSTTService.kt  SessionManager.kt  SpeechManager.kt
app/src/main/java/com/example/jibberish/ui/screens/: HistoryScreen.kt  SettingsScreen.kt
app/src/main/java/com/example/jibberish/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/example/jibberish/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
